# SWE-CLI

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  bandit-report.json  codex.config.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
prompts/: codegen.md  codegen_with_tests.md
src/: codex_codegen.py  config.py  jira_fetch.py  logging_setup.py  main.py  mcp_context.py  mcp_output_utils.py  safe_mcp_tools.py
tests/: __init__.py  conftest.py  test_additional_instructions.py  test_config.py  test_context_window.py  test_jira_fetch.py  test_logging_setup.py  test_main.py  test_mcp_context.py  test_mcp_output_utils.py
